--- a/css/globals.css
+++ b/css/globals.css
@@ -99,7 +99,7 @@
 header {
     width: 100vw;
     height: 100vh;
-    background-image: url('./img/image.png');
+    background-image: url('../img/image.png');
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
